; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/block/extr_scm_blk.c_scm_ensure_queue_restart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/block/extr_scm_blk.c_scm_ensure_queue_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scm_blk_dev = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scm_blk_dev*)* @scm_ensure_queue_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scm_ensure_queue_restart(%struct.scm_blk_dev* %0) #0 {
  %2 = alloca %struct.scm_blk_dev*, align 8
  store %struct.scm_blk_dev* %0, %struct.scm_blk_dev** %2, align 8
  %3 = load %struct.scm_blk_dev*, %struct.scm_blk_dev** %2, align 8
  %4 = getelementptr inbounds %struct.scm_blk_dev, %struct.scm_blk_dev* %3, i32 0, i32 1
  %5 = call i64 @atomic_read(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %13

8:                                                ; preds = %1
  %9 = load %struct.scm_blk_dev*, %struct.scm_blk_dev** %2, align 8
  %10 = getelementptr inbounds %struct.scm_blk_dev, %struct.scm_blk_dev* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @blk_plug_device(i32 %11)
  br label %13

13:                                               ; preds = %8, %7
  ret void
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @blk_plug_device(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
